Bug 77747 - Latin text bullets in a list instead of Hebrew in .ppt
Summary: Latin text bullets in a list instead of Hebrew in .ppt
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: easyHack, filter:doc
Depends on:
Blocks:
 
Reported: 2014-04-21 21:25 UTC by Ofir
Modified: 2018-04-06 10:42 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
ppt showing the issue (144.50 KB, application/vnd.ms-powerpoint)
2014-04-21 21:25 UTC, Ofir
Details
pdf exported from powerpoint 2013 showing the Hebrew bullets (86.33 KB, application/pdf)
2014-04-21 21:25 UTC, Ofir
Details
pdf exported from LO showing the Latin bullets (11.54 KB, application/pdf)
2014-04-21 21:26 UTC, Ofir
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ofir 2014-04-21 21:25:16 UTC
Created attachment 97712 [details]
ppt showing the issue

The Hebrew bulleted text is displayed as Latin letters.

Tested on Ubuntu 14.04 and Windows 7.
Comment 1 Ofir 2014-04-21 21:25:44 UTC
Created attachment 97713 [details]
pdf exported from powerpoint 2013 showing the Hebrew bullets
Comment 2 Ofir 2014-04-21 21:26:01 UTC
Created attachment 97714 [details]
pdf exported from LO showing the Latin bullets
Comment 3 tommy27 2014-07-17 19:21:34 UTC
reproducible under Win7x64 using LibO 4.2.5.2 and recent 4.4 master daily build
same issue in older LibO releases and OOo 3.3.0 and AOO 4.1.0

hence bug is inherited from OOo
Comment 4 Ofir 2015-02-06 01:01:50 UTC
Reproducible Under Win7x64, LO 4.4.0.3.
Comment 5 Ofir 2015-09-02 16:20:13 UTC
Reproducible with LO Version: 5.1.0.0.alpha1+
Build ID: 0c1d3f0c17296c113358228cf36596347fd045e3
Ubuntu 15.04
Comment 6 Ofir 2016-08-17 09:39:44 UTC
Reproducible with LO  5.2.0.4 on Ubuntu 16.04
Comment 7 QA Administrators 2017-09-01 11:15:56 UTC Comment hidden (obsolete)
Comment 8 Ofir 2017-11-09 23:57:15 UTC
Still reproducible with LO 6.0.0.0.alpha1 on Ubuntu 16.04.
Comment 9 Mark Hung 2018-02-20 13:47:19 UTC
Check
PPTNumberFormatCreator::ImplGetExtNumberFormat
and StyleTextProp9::Read
in source/filter/msfilter/svdfppt.cxx


As documented in TextAutoNumberScheme:
http://interoperability.blob.core.windows.net/files/MS-PPT/[MS-PPT].pdf

Hebrew is missing.
ANM_Hebrew2Minus 0x0019 Bidi Hebrew 2 with ANSI minus symbol.
Comment 10 Ofir 2018-03-03 22:37:10 UTC
Reproducible with:

Version: 6.1.0.0.alpha0+
Build ID: 44b4ad7d210097fdaed7dd94c5746b03f43592d3
CPU threads: 1; OS: Linux 4.13; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-03-02_23:38:12
Locale: en-US (en_US.UTF-8); Calc: group
Comment 11 Commit Notification 2018-04-06 10:38:37 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3b17a8ebad5251d7908cf1d992c8b76b88557578

tdf#77747 handle Hebrew numbering in ppt.

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.