tdf#77747 handle Hebrew numbering in ppt.

Change-Id: I4af60a701e4dc2c3bae1c223ec56e03c16210996